@@ -42,7 +42,8 @@ all: stdlib.cma std_exit.cmo camlheader camlheader_ur
 INSTALL_LIBDIR=$(DESTDIR)$(LIBDIR)
 
 install: install-$(RUNTIMED)
-	cp stdlib.cma std_exit.cmo *.cmi *.mli *.ml camlheader camlheader_ur \
+	cp stdlib.cma std_exit.cmo *.cmi *.cmt *.cmti *.mli *.ml \
+	  camlheader camlheader_ur \
 	  $(INSTALL_LIBDIR)
 
 install-noruntimed:
